# cord

./: Cargo.toml  README.md  x.yaml
src/: main.rs  midi.rs  music.rs  seq.rs
src/backend/: backend.rs  jack.rs  mod.rs
