[package]
name = "cord"
version = "0.1.0"
authors = ["Jack Britton <jackxbritton@gmail.com>"]
edition = "2018"

[dependencies]
crossbeam = "0.7.3"
ctrlc = { version = "3.0", features = ["termination"] }
cursive = { version = "0.15", features = ["toml"] }
jack = "0.6.2"
log = "0.4.11"
rand = "0.7.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
termion = "*"
unicode-segmentation = "1.6.0"
